2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (grub_bad_type_cast_real): Remove return.
	* include/grub/misc.h (ATTRIBUTE_ERROR): Make into noreturn attribute
	on older compiler.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_biosdisk_get_grub_dev) [__APPLE__]:
	Implement Apple flavour.
	(convert_system_partition_to_system_disk) [__APPLE__]: Likewise.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (memcmp) [__APPLE__]: Mark as regparm 0.
	(memmove) [__APPLE__]: Likewise.
	(memcpy) [__APPLE__]: Likewise.
	(memset) [__APPLE__]: Likewise.
	* grub-core/kern/misc.c (memcmp) [__APPLE__]: Likewise.
	(memmove) [__APPLE__]: Likewise.
	(memcpy) [__APPLE__]: Likewise.
	(memset) [__APPLE__]: Likewise.

2012-05-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Fix a bug in Apple part which caused
	dependency discard.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/main.c (read_config_file): Provide config_file and
	config_directory.
	* util/grub.d/41_custom.in: Use config_directoy when available.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (iterate_in_b_tree): Add missing NESTED_FUNC_ATTR.
	(grub_bfs_dir): Likewise.

2012-05-27  Peter Jones <pjones@redhat.com>

	The old code gives arguments to a printf function which can't work
	correctly, and the compiler complains.

	* grub-core/tests/example_functional_test.c (example_test): Add
	missing text.
	* grub-core/tests/lib/test.c (add_failure): Rewrite.
	* include/grub/test.h (grub_test_assert_helper): New declaration.
	(grub_test_assert): Use grub_test_assert_helper.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (example_functional_test): Rename to ...
	(exfctest): ... this to avoid overlong filenames.
	All users updated.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle "." and ".." on squashfs.
